@@ -37,6 +37,8 @@ NEW FEATURES
 	do better on S3 inheritance per-instance for S4 methods.
 	See ?Methods and the paper referenced there.
 
+    o	nlminb() gives better non-convergence messages in some cases.
+
 
 DEPRECATED & DEFUNCT
 
@@ -154,6 +156,10 @@ BUG FIXES
     o	The test for setting dim() allowed a value with two or more
 	NAs to be set on a 0-length object.  (PR#13729)  Also, it
 	allowed an even number of negative values.
+
+    o	xtfrm(), rank(), sort() and order() did not always make use of
+	custom comparison methods specific to the class of elements
+	being sorted.
 
 
 
